Fix exercises overflow causing AddRoutine view to spill pass viewport

--- a/frontend/src/components/Exercise.css
+++ b/frontend/src/components/Exercise.css
@@ -4,6 +4,9 @@
   align-items: center;
   white-space: nowrap;
 
+  flex-shrink: 0;
+  flex-grow: 0;
+
   width: calc(100% - 10px);
   height: 40px;
   
@@ -13,7 +16,6 @@
   padding: 4px 7px;
 
   border: 1px solid transparent;
-
   border-radius: 10px;
 
   transition: border-color 0.2s, background-color 0.2s;
